# bp-fast

./: .coverage  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  compose.yaml  fluxograma.excalidraw  pyproject.toml
backend/: .env  .env-example  Dockerfile  alembic.ini  compose.yaml  env.example  pyproject.toml
backend/config/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 66e8e610e641_base.py
backend/otel/: README.md  compose.yml  start.sh  stop.sh
backend/otel/config/: loki.yml  prometheus.yml  promtail.yml  tempo.yml
backend/otel/config/grafana/dashboards/: observability-overview.json
backend/otel/config/grafana/provisioning/datasources/: datasources.yml
backend/src/: __init__.py
backend/src/adapter/controller/: user.py
backend/src/adapter/controllers/: user.py
backend/src/adapter/repository/: user.py
backend/src/core/domain/: user.py
backend/src/core/ports/controllers/: __init__.py
backend/src/core/ports/repository/: __init__.py
backend/src/core/services/: user_business_rules.py
backend/src/infra/connect/: redis.py  sql.py
backend/src/infra/database/connect/: redis.py  sql.py
backend/src/infra/database/model/: __init__.py  config.py  fingerprint.py  user.py
backend/src/infra/model/: __init__.py  config.py  fingerprint.py  user.py
backend/src/infra/security/auth/: __init__.py  jwt.py  session.py
backend/src/infra/security/cryptography/: __init__.py
backend/src/infra/security/hashpass/: __init__.py
backend/src/infra/security/otp/: __init__.py
backend/src/interfaces/routers/: __init__.py
backend/src/interfaces/routers/auth/: __init__.py  auth.py  user.py
backend/src/interfaces/schema/auth/: __init__.py
backend/src/utils/: __init__.py
backend/src/utils/helpers/: sql.py
config/: __init__.py
frontend/: README.md  SETUP.md  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/components/: Login.vue
frontend/src/services/: api.js
migrations/: env.py
src/: __init__.py
src/adapter/repository/: user.py
src/core/ports/: repository.py
src/infra/connection/: sql.py
src/infra/defaults/exeptions/: password.py
src/infra/models/: __init__.py  user.py
src/infra/security/: password.py
src/infra/validators/: password.py
src/interfaces/routers/: __init__.py
src/interfaces/routers/test/: __init__.py  info_me.py
